[gd_scene load_steps=5 format=3 uid="uid://skc4mh46s811"]

[ext_resource type="Script" uid="uid://w7epyn35xpyy" path="res://Script/Models/Sudoku/SudokuGrid.gd" id="1_2rocb"]
[ext_resource type="PackedScene" uid="uid://bg5dajfqwmca2" path="res://Scenes/Sudoku/SudokuCell.tscn" id="1_oo6bj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2rocb"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(1, 0, 0, 1)
corner_detail = 5

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2rocb"]
size = Vector2(364, 364)

[node name="SudokuGrid" type="Node2D"]
script = ExtResource("1_2rocb")

[node name="SudokuCell" parent="." instance=ExtResource("1_oo6bj")]

[node name="SudokuCell2" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(40, 0)
Index = Vector2(1, 0)

[node name="SudokuCell3" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(80, 0)
Index = Vector2(2, 0)

[node name="SudokuCell4" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(122, 0)
Index = Vector2(3, 0)
Quadrant = Vector2(1, 0)

[node name="SudokuCell5" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(162, 0)
Index = Vector2(4, 0)
Quadrant = Vector2(1, 0)

[node name="SudokuCell7" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(202, 0)
Index = Vector2(5, 0)
Quadrant = Vector2(1, 0)

[node name="SudokuCell8" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(244, 0)
Index = Vector2(6, 0)
Quadrant = Vector2(2, 0)

[node name="SudokuCell9" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(284, 0)
Index = Vector2(7, 0)
Quadrant = Vector2(2, 0)

[node name="SudokuCell10" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(324, 0)
Index = Vector2(8, 0)
Quadrant = Vector2(2, 0)

[node name="SudokuCell11" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(0, 40)
Index = Vector2(0, 1)

[node name="SudokuCell12" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(40, 40)
Index = Vector2(1, 1)

[node name="SudokuCell13" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(80, 40)
Index = Vector2(2, 1)

[node name="SudokuCell14" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(122, 40)
Index = Vector2(3, 1)
Quadrant = Vector2(1, 0)

[node name="SudokuCell15" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(162, 40)
Index = Vector2(4, 1)
Quadrant = Vector2(1, 0)

[node name="SudokuCell17" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(202, 40)
Index = Vector2(5, 1)
Quadrant = Vector2(1, 0)

[node name="SudokuCell18" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(244, 40)
Index = Vector2(6, 1)
Quadrant = Vector2(2, 0)

[node name="SudokuCell19" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(284, 40)
Index = Vector2(7, 1)
Quadrant = Vector2(2, 0)

[node name="SudokuCell20" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(324, 40)
Index = Vector2(8, 1)
Quadrant = Vector2(2, 0)

[node name="SudokuCell21" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(0, 80)
Index = Vector2(0, 2)

[node name="SudokuCell22" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(40, 80)
Index = Vector2(1, 2)

[node name="SudokuCell23" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(80, 80)
Index = Vector2(2, 2)

[node name="SudokuCell24" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(122, 80)
Index = Vector2(3, 2)
Quadrant = Vector2(1, 0)

[node name="SudokuCell25" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(162, 80)
Index = Vector2(4, 2)
Quadrant = Vector2(1, 0)

[node name="SudokuCell27" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(202, 80)
Index = Vector2(5, 2)
Quadrant = Vector2(1, 0)

[node name="SudokuCell28" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(244, 80)
Index = Vector2(6, 2)
Quadrant = Vector2(2, 0)

[node name="SudokuCell29" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(284, 80)
Index = Vector2(7, 2)
Quadrant = Vector2(2, 0)

[node name="SudokuCell30" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(324, 80)
Index = Vector2(8, 2)
Quadrant = Vector2(2, 0)

[node name="SudokuCell61" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(0, 244)
Index = Vector2(0, 6)
Quadrant = Vector2(0, 2)

[node name="SudokuCell62" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(40, 244)
Index = Vector2(1, 6)
Quadrant = Vector2(0, 2)

[node name="SudokuCell63" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(80, 244)
Index = Vector2(2, 6)
Quadrant = Vector2(0, 2)

[node name="SudokuCell64" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(122, 244)
Index = Vector2(3, 6)
Quadrant = Vector2(1, 2)

[node name="SudokuCell65" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(162, 244)
Index = Vector2(4, 6)
Quadrant = Vector2(1, 2)

[node name="SudokuCell67" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(202, 244)
Index = Vector2(5, 6)
Quadrant = Vector2(1, 2)

[node name="SudokuCell68" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(244, 244)
Index = Vector2(6, 6)
Quadrant = Vector2(2, 2)

[node name="SudokuCell69" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(284, 244)
Index = Vector2(7, 6)
Quadrant = Vector2(2, 2)

[node name="SudokuCell70" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(324, 244)
Index = Vector2(8, 6)
Quadrant = Vector2(2, 2)

[node name="SudokuCell71" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(0, 284)
Index = Vector2(0, 7)
Quadrant = Vector2(0, 2)

[node name="SudokuCell72" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(40, 284)
Index = Vector2(1, 7)
Quadrant = Vector2(0, 2)

[node name="SudokuCell73" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(80, 284)
Index = Vector2(2, 7)
Quadrant = Vector2(0, 2)

[node name="SudokuCell74" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(122, 284)
Index = Vector2(3, 7)
Quadrant = Vector2(1, 2)

[node name="SudokuCell75" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(162, 284)
Index = Vector2(4, 7)
Quadrant = Vector2(1, 2)

[node name="SudokuCell77" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(202, 284)
Index = Vector2(5, 7)
Quadrant = Vector2(1, 2)

[node name="SudokuCell78" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(244, 284)
Index = Vector2(6, 7)
Quadrant = Vector2(2, 2)

[node name="SudokuCell79" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(284, 284)
Index = Vector2(7, 7)
Quadrant = Vector2(2, 2)

[node name="SudokuCell80" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(324, 284)
Index = Vector2(8, 7)
Quadrant = Vector2(2, 2)

[node name="SudokuCell81" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(0, 324)
Index = Vector2(0, 8)
Quadrant = Vector2(0, 2)

[node name="SudokuCell82" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(40, 324)
Index = Vector2(1, 8)
Quadrant = Vector2(0, 2)

[node name="SudokuCell83" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(80, 324)
Index = Vector2(2, 8)
Quadrant = Vector2(0, 2)

[node name="SudokuCell84" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(122, 324)
Index = Vector2(3, 8)
Quadrant = Vector2(1, 2)

[node name="SudokuCell85" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(162, 324)
Index = Vector2(4, 8)
Quadrant = Vector2(1, 2)

[node name="SudokuCell87" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(202, 324)
Index = Vector2(5, 8)
Quadrant = Vector2(1, 2)

[node name="SudokuCell88" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(244, 324)
Index = Vector2(6, 8)
Quadrant = Vector2(2, 2)

[node name="SudokuCell89" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(284, 324)
Index = Vector2(7, 8)
Quadrant = Vector2(2, 2)

[node name="SudokuCell90" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(324, 324)
Index = Vector2(8, 8)
Quadrant = Vector2(2, 2)

[node name="SudokuCell31" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(0, 122)
Index = Vector2(0, 3)
Quadrant = Vector2(0, 1)

[node name="SudokuCell32" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(40, 122)
Index = Vector2(1, 3)
Quadrant = Vector2(0, 1)

[node name="SudokuCell33" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(80, 122)
Index = Vector2(2, 3)
Quadrant = Vector2(0, 1)

[node name="SudokuCell34" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(122, 122)
Index = Vector2(3, 3)
Quadrant = Vector2(1, 1)

[node name="SudokuCell35" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(162, 122)
Index = Vector2(4, 3)
Quadrant = Vector2(1, 1)

[node name="SudokuCell37" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(202, 122)
Index = Vector2(5, 3)
Quadrant = Vector2(1, 1)

[node name="SudokuCell38" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(244, 122)
Index = Vector2(6, 3)
Quadrant = Vector2(2, 1)

[node name="SudokuCell39" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(284, 122)
Index = Vector2(7, 3)
Quadrant = Vector2(2, 1)

[node name="SudokuCell40" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(324, 122)
Index = Vector2(8, 3)
Quadrant = Vector2(2, 1)

[node name="SudokuCell41" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(0, 162)
Index = Vector2(0, 4)
Quadrant = Vector2(0, 1)

[node name="SudokuCell42" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(40, 162)
Index = Vector2(1, 4)
Quadrant = Vector2(0, 1)

[node name="SudokuCell43" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(80, 162)
Index = Vector2(2, 4)
Quadrant = Vector2(0, 1)

[node name="SudokuCell44" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(122, 162)
Index = Vector2(3, 4)
Quadrant = Vector2(1, 1)

[node name="SudokuCell45" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(162, 162)
Index = Vector2(4, 4)
Quadrant = Vector2(1, 1)

[node name="SudokuCell47" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(202, 162)
Index = Vector2(5, 4)
Quadrant = Vector2(1, 1)

[node name="SudokuCell48" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(244, 162)
Index = Vector2(6, 4)
Quadrant = Vector2(2, 1)

[node name="SudokuCell49" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(284, 162)
Index = Vector2(7, 4)
Quadrant = Vector2(2, 1)

[node name="SudokuCell50" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(324, 162)
Index = Vector2(8, 4)
Quadrant = Vector2(2, 1)

[node name="SudokuCell51" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(0, 202)
Index = Vector2(0, 5)
Quadrant = Vector2(0, 1)

[node name="SudokuCell52" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(40, 202)
Index = Vector2(1, 5)
Quadrant = Vector2(0, 1)

[node name="SudokuCell53" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(80, 202)
Index = Vector2(2, 5)
Quadrant = Vector2(0, 1)

[node name="SudokuCell54" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(122, 202)
Index = Vector2(3, 5)
Quadrant = Vector2(1, 1)

[node name="SudokuCell55" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(162, 202)
Index = Vector2(4, 5)
Quadrant = Vector2(1, 1)

[node name="SudokuCell57" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(202, 202)
Index = Vector2(5, 5)
Quadrant = Vector2(1, 1)

[node name="SudokuCell58" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(244, 202)
Index = Vector2(6, 5)
Quadrant = Vector2(2, 1)

[node name="SudokuCell59" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(284, 202)
Index = Vector2(7, 5)
Quadrant = Vector2(2, 1)

[node name="SudokuCell60" parent="." instance=ExtResource("1_oo6bj")]
position = Vector2(324, 202)
Index = Vector2(8, 5)
Quadrant = Vector2(2, 1)

[node name="Panel" type="Panel" parent="."]
offset_left = 120.0
offset_top = -1.0
offset_right = 122.0
offset_bottom = 364.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2rocb")

[node name="Panel3" type="Panel" parent="."]
offset_top = 120.0
offset_right = 364.0
offset_bottom = 122.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2rocb")

[node name="Panel4" type="Panel" parent="."]
offset_top = 242.0
offset_right = 364.0
offset_bottom = 244.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2rocb")

[node name="Panel2" type="Panel" parent="."]
offset_left = 242.0
offset_top = -1.0
offset_right = 244.0
offset_bottom = 364.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2rocb")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(182, 182)
shape = SubResource("RectangleShape2D_2rocb")
debug_color = Color(0, 0.6, 0, 0.41960785)

[connection signal="hoverChanged" from="SudokuCell" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell2" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell2" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell3" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell3" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell4" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell4" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell5" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell5" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell7" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell7" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell8" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell8" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell9" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell9" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell10" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell10" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell11" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell11" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell12" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell12" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell13" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell13" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell14" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell14" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell15" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell15" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell17" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell17" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell18" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell18" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell19" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell19" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell20" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell20" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell21" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell21" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell22" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell22" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell23" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell23" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell24" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell24" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell25" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell25" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell27" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell27" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell28" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell28" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell29" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell29" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell30" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell30" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell61" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell61" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell62" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell62" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell63" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell63" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell64" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell64" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell65" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell65" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell67" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell67" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell68" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell68" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell69" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell69" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell70" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell70" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell71" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell71" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell72" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell72" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell73" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell73" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell74" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell74" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell75" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell75" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell77" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell77" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell78" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell78" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell79" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell79" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell80" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell80" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell81" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell81" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell82" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell82" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell83" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell83" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell84" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell84" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell85" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell85" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell87" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell87" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell88" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell88" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell89" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell89" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell90" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell90" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell31" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell31" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell32" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell32" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell33" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell33" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell34" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell34" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell35" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell35" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell37" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell37" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell38" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell38" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell39" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell39" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell40" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell40" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell41" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell41" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell42" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell42" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell43" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell43" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell44" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell44" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell45" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell45" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell47" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell47" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell48" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell48" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell49" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell49" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell50" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell50" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell51" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell51" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell52" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell52" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell53" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell53" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell54" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell54" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell55" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell55" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell57" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell57" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell58" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell58" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell59" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell59" to="." method="onHoverChanged"]
[connection signal="cellSelected" from="SudokuCell60" to="." method="onCellSelected"]
[connection signal="hoverChanged" from="SudokuCell60" to="." method="onHoverChanged"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
